# SiamFC-PyTorch

./: .gitignore  onnx2engine.sh
cpp/: CMakeLists.txt  cv_ui.cpp  cv_ui.h  main.cpp  main1.cpp  offline_test.cpp  online_test.cpp  sampleDynamicReshape.cpp  sampleOnnxMNIST.cpp  tracker.cpp  tracker.h
cpp/common/: BatchStream.h  buffers.h
pretrained/: CalibrationTableSiamfc  CalibrationTableSiamfc_pruning
siamfc/: __init__.py  backbones.py  backbones_pruning.py  siamfc.py  tracker.py
tools/: demo.py  pth2onnx.py  test.py  train.py  video.py
